testsuite/tests/properties/invalid_abstract/test.out
== abstract_overrides.lkt ==
abstract_overrides.lkt:13:15: error: Abstract properties with no runtime check cannot override another property. Here, Identifier.prop is abstract and overrides BaseNode.prop.
13 |     @abstract fun prop(): Bool
   |               ^^^^^^^^^^^^^^^^


== list_abstract_in_root.lkt ==
list_abstract_in_root.lkt:7:23: error: Abstract property prop is not overriden in all subclasses. Missing overriding properties on classes: BaseNode.list
7 |     @export @abstract fun prop(): Bool
  |                       ^^^^^^^^^^^^^^^^


lkt_compile: Done
